Switch to different publishing plugin
The nexus version does not work correctly.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 androidGradlePlugin = "8.13.1"
 kotlin = "2.2.21"
 spotless = "8.0.0"
-publish = "2.0.0"
+publish = "0.35.0"
 release = "3.1.0"
 metalava = "0.4.0-alpha03"
 dokka = "2.1.0"
@@ -51,7 +51,7 @@ android-library = { id = "com.android.library", version.ref = "androidGradlePlug
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
-publish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "publish" }
+publish = { id = "com.vanniktech.maven.publish", version.ref = "publish" }
 release = { id = "net.researchgate.release", version.ref = "release" }
 metalava = { id = "me.tylerbwong.gradle.metalava", version.ref = "metalava" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
