--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,7 +147,7 @@ jobs:
   upload:
     name: Upload to GitHub releases
     needs: build
-    if: ${{ (github.event_name == 'push') && (github.repository == 'connectbot/terminal') && ((github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags/v')) }}
+    if: ${{ (github.event_name == 'push') && (github.repository == 'connectbot/termlib') && ((github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags/')) }}
     runs-on: ubuntu-latest
 
     steps:
