--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,4 @@ org.gradle.configuration-cache=true
 
 version=0.0.3-SNAPSHOT
 group=org.connectbot
-description=SSH library used in the ConnectBot app
+description=ConnetBot's Terminal Emulator library
