--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ android.enableJetifier=false
 android.jetifier.ignorelist=bcprov-jdk15on
 org.gradle.configuration-cache=true
 
-version=0.0.9
+version=0.0.10-SNAPSHOT
 group=org.connectbot
 description=ConnetBot's Terminal Emulator library
