--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,7 +181,7 @@ jobs:
   docs:
     name: Publish docs to GitHub Pages
     needs: build
-    if: ${{ (github.event_name == 'push') && ((github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags/')) }}
+    if: ${{ (github.event_name == 'push') && (github.repository == 'connectbot/termlib') && ((github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags/')) }}
     runs-on: ubuntu-latest
     environment:
       name: github-pages
